# mbstats

./: .dockerignore  .gitignore  .gitmodules  .isort.cfg  .pep8  .pre-commit-config.yaml  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run  run.example.sh  setup.py
.circleci/: config.yml
.github/workflows/: dockerci.yml  python-package.yml
docker/: Dockerfile  mbstats.crontab  run.example.sh
files/: grafana-mbstats.json  mbstats.crontab  stats.parser.py  test.sh  test2.sh
mbstats/: __main__.py  app.py  influxdb1x.py  main.py  run
mbstats/backends/: __init__.py  influxdb.py
mbstats/cmdline_options/: __init__.py
mbstats/locker/: __init__.py
mbstats/safefile/: __init__.py
mbstats/tests/: __init__.py  test_basics.py  test_locker.py  test_parser.py  test_safefile.py  test_utils.py
mbstats/utils/: __init__.py
tests/: test_influxdb_integration.py  test_locker.py  test_parser.py  test_utils.py
