[tool.poetry]
name = "mbstats"
version = "1.2.5"
description = "nginx near-realtime log files analyzer"
authors = ["Laurent Monin"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.scripts]
mbstats = "mbstats.app:main"

[tool.poetry.dependencies]
python = ">=3.8.1"
influxdb = "^5.3.1"
portalocker = "^2.7.0"
pygtail = "^0.14.0"
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
certifi = ">=2023.7.22"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.0.0"
coverage = "^7.2.7"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
