[project]
name = "mbstats"
version = "1.2.5"
description = "nginx near-realtime log files analyzer"
authors = [{name = "Laurent Monin"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "influxdb>=5.3.1",
    "portalocker>=2.7.0",
    "pygtail>=0.14.0",
    "certifi>=2023.7.22",
]

[project.scripts]
mbstats = "mbstats.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "coverage>=7.2.7",
    "pylint>=2.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
