[project]
name = "mbstats"
version = "1.2.5"
description = "nginx near-realtime log files analyzer"
authors = [{name = "Laurent Monin"}]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "urllib3>=2.0",
    "portalocker>=2.7.0",
    "pygtail>=0.14.0",
]

[project.scripts]
mbstats = "mbstats.app:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "ruff>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a running InfluxDB instance (use -m integration to run)",
]
addopts = "-m 'not integration'"
filterwarnings = [
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.ruff]
src = ["mbstats"]

[tool.ruff.lint]
select = ["E", "F", "W", "B", "I", "UP"]
ignore = ["E501", "B904", "B905", "UP031"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"
